# photon.apps

./: .gitignore  AGRO.groupproj  AGRO2.groupproj  BeeWings.groupproj  IPFRAS.groupproj  Marker.groupproj  PHOTON SURVEILLANCE.doc  PRI - Ярлык.lnk  photon41.apps.groupproj  photon41.apps.groupproj.local
BeeWings/: BeeWings.groupproj
BeeWings/FVLCore/: FVLCore.dsp  FVLCore.vcproj  Makefile.am  configure.ac  fvlcore.pc.in
BeeWings/FVLCore/borland/: FVLCB.bpr  FVLCB.cbproj
BeeWings/FVLCore/src/: Doxyfile  Makefile.am  SeparationMatrix.cpp  SeparationMatrix.h  awpeigenlib.cpp  awpeigenlib.h  fvlcore.cpp  fvlcore.h
BeeWings/FVLCore/vc/vc2005/: FVLCore.vcproj
BeeWings/FVLCore/vc/vc2008/: FVLCore.vcproj
BeeWings/FVLCore/vc/vc2010/: FVLCore.sln  FVLCore.vcxproj
EngineView/: EngineView.cpp  EngineViewUnit.cpp  EngineViewUnit.dfm  EngineViewUnit.h  MainUnit.dfm
LFMarker/: DbConvertForm.cpp  DbConvertForm.dfm  DbConvertForm.h  DbCopyForm.cpp  DbCopyForm.dfm  DbCopyForm.h  DbExportForm.cpp  DbExportForm.dfm  DbExportForm.h  DbInfoForm.cpp  DbInfoForm.dfm  DbInfoForm.h  DbInfoForm.vlb  DbLabeledImages.cpp  DbLabeledImages.h  DbSplitForm.cpp  DbSplitForm.dfm  DbSplitForm.h  DetectorInfoForm.cpp  DetectorInfoForm.dfm  DetectorInfoForm.h  DictionaryForm.cpp  DictionaryForm.dfm  DictionaryForm.h  EngineErrForm.cpp  EngineErrForm.dfm  EngineErrForm.h  ExportImagesForm.cpp  ExportImagesForm.dfm  ExportImagesForm.h  EyeMarker.cpp  FilterForm.cpp  FilterForm.dfm  FilterForm.h  GaussFilterForm.cpp  GaussFilterForm.dfm  GaussFilterForm.h  Hst2DWindow.cpp  Hst2DWindow.dfm  Hst2DWindow.h  (+46 more)
OAConvert/: OAConvert.cbproj  OAConvert.cpp  OAConvert.res  OA_tiff_io.cpp  OA_tiff_io.h  mainUnit.cpp  mainUnit.dfm  mainUnit.h
OCRDemo/: OCRdemo.cbproj  OCRdemo.cbproj.local  OCRdemo.stat  OCRmain.cpp  OCRmain.dfm  OCRmain.h  ProjectGroup2.groupproj  pvt.cppan.demo.google.tesseract.libtesseract-master.lib  tesswrapper.lib  tesswrapperb.lib
Optoacustics/: Form3DUnit.cpp  Form3DUnit.dfm  Form3DUnit.h  FormBimaryUnit.cpp  FormBimaryUnit.dfm  FormBimaryUnit.h  FormLongProcessUnit.cpp  (+24 more)
(+539 files in other folders)
